--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.0",
     "soni-rameshbhai-and-sons": "file:",
     "web-vitals": "^2.1.4"
   },
